# rcwm

./: COMPLIANCE  Cargo.toml  README.md  notes  rcwm.desktop  run.sh
src/: config.rs  desktop.rs  keys.rs  lib.rs  log.rs  main.rs  types.rs  utils.rs  values.rs  window.rs  wm.rs  workspace.rs  xserver.rs
src/core/: desktop.rs  mod.rs  ring.rs  types.rs  window.rs  workspace.rs
src/layout/: dtiled.rs  floating.rs  mod.rs
src/manager/: event.rs  mod.rs  state.rs
src/x/: core.rs  event.rs  ewmh.rs  icccm.rs  mod.rs  xserver.rs
