[package]
name = "rcwm"
version = "0.1.0"
authors = ["cartoon-raccoon <shaughn.chan@gmail.com>"]
edition = "2018"

[lib]
name = "rcwm"
path = "src/lib.rs"

[[bin]]
name = "rcwm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = "0.9.0"
xcb-util = { version = "0.3", features = ["keysyms", "cursor", "ewmh", "icccm"]}
x11 = "2.18"

log = "0.4"
flexi_logger = "0.17"

nix = "0.20"

anyhow = "1"
